--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -6808,9 +6808,6 @@ span.site-name {
 .region-map.col-md-12, .region-map.calendar-calendar, .view .row > .region-map.list-group {
   margin: 0 0 20px 0; }
 
-.region-content.col-md-8 {
-  margin: 55px 0 60px 0; }
-
 #footer {
   margin: 36px 0 0 0; }
 
@@ -7542,7 +7539,7 @@ span.site-slogan {
 
 .page-header h1 {
   text-align: center;
-  margin: 30px 0 0 0;
+  margin: 30px 0;
   font-size: x-large; }
   @media (max-width: 767px) {
     .page-header h1 {
