--- a/themes/custom/masradix/scss/components/_structure.scss
+++ b/themes/custom/masradix/scss/components/_structure.scss
@@ -6,7 +6,7 @@
 .page-header {
   h1 {
     text-align: center;
-    margin: 30px 0 0 0;
+    margin: 30px 0;
     font-size: x-large;
     @media (max-width: $screen-xs-max) {
       font-size: medium;
