--- a/themes/custom/masradix/scss/components/_block.scss
+++ b/themes/custom/masradix/scss/components/_block.scss
@@ -17,10 +17,9 @@
   margin: 60px 20px 0 0;
 }
 
-.block--userlogin ul {
-
+.block-content--mas-custom {
+  margin: 40px 0;
 }
-
 
 // Info block for front-page.
 
