Add background to header element

--- a/themes/custom/masradix/assets/css/color/colors.css
+++ b/themes/custom/masradix/assets/css/color/colors.css
@@ -111,6 +111,7 @@ body {
 
 .view--requests .view__header,
 .shariff-button a,
+header.clearfix,
 .add-block,
 footer#footer,
 .region-sidebar li.list-group-item,
