--- a/themes/custom/masradix/scss/mas/_sidebarNav.scss
+++ b/themes/custom/masradix/scss/mas/_sidebarNav.scss
@@ -113,7 +113,7 @@
   }
 
   a.navbar-brand {
-    margin: 0 100px 0 0;
+    margin: 0 30px 0 0;
   }
 
   .block .user-login-form {
@@ -121,7 +121,8 @@
   }
 
   .navbar-left {
-    margin: 20px 10px 0 0px
+    margin: 10px 10px 0 0px;
+    float: right!important;
   }
 
   .navbar-right {
