--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7207,6 +7207,19 @@ label.image-widget-data.btn.btn-block.btn-default {
   padding: 15px;
   text-transform: uppercase; }
 
+@media (min-width: 992px) {
+  header.clearfix, #node-edit header.form-item-path-alias {
+    background-size: 40px;
+    background-repeat: repeat-x;
+    background-position: top;
+    height: 80px; } }
+
+@media (max-width: 992px) {
+  header.clearfix, #node-edit header.form-item-path-alias {
+    height: 80px;
+    padding: 20px;
+    background-color: none; } }
+
 @media (min-width: 1200px) {
   .navbar-left {
     float: left !important;
@@ -7216,11 +7229,13 @@ label.image-widget-data.btn.btn-block.btn-default {
   .navbar-nav {
     float: none !important;
     margin: 0; }
-  button.navbar-toggle.offcanvas-toggle {
+  .navbar-toggle.offcanvas-toggle {
     position: fixed;
     right: 0;
-    top: 0;
-    z-index: 9999; } }
+    top: 10px;
+    z-index: 9999; }
+  .page--logged-in .navbar-toggle {
+    top: 50px; } }
 
 @media (max-width: 992px) {
   .navbar-toggle {
@@ -8468,11 +8483,12 @@ ul.log_list .count {
   .fixed-header {
     display: none; }
   a.navbar-brand {
-    margin: 0 100px 0 0; }
+    margin: 0 30px 0 0; }
   .block .user-login-form {
     display: none; }
   .navbar-left {
-    margin: 20px 10px 0 0px; }
+    margin: 10px 10px 0 0px;
+    float: right !important; }
   .navbar-right {
     margin: 0 10px 0 0;
     float: right !important;
