--- a/themes/custom/masradix/templates/node/node--service-request.html.twig
+++ b/themes/custom/masradix/templates/node/node--service-request.html.twig
@@ -115,7 +115,7 @@ set category_icon = [
   {% endif %}
 
   <div{{ content_attributes.addClass('content') }}>
-    {{ content|without('field_status_notes','field_category','field_request_image') }}
+    {{ content|without('field_status','field_status_notes','field_category','field_request_image') }}
   </div>
   <div class="container category-status">
     <div class="service-request__field-status col-sm-{{ cols }} {{ 'color-'  ~  mas_status['color']|lower  }}"><div class="field__item label label-default"><span class="fa {{ mas_status['icon'] }} "></span><div class="field__item label label-default">{{ mas_status['label'] }}</div></div></div>
