--- a/themes/custom/masradix/assets/css/color/colors.css
+++ b/themes/custom/masradix/assets/css/color/colors.css
@@ -21,16 +21,11 @@ body {
   border-color: #0071b3 !important;
 }
 
-
-.notifications li,
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom,
-#sidebar-wrapper {
-  background-color: #055a8e;
-  background-image: -webkit-linear-gradient(top, #055a8e 0%, #055a8e 100%);
-  background-image: linear-gradient(to bottom, #055a8e 0%, #055a8e 100%);
+.navbar-default .navbar-toggle .icon-bar,
+.navbar-offcanvas.in {
+  background-color: #292929;
 }
+
 
 .btn-default:active:hover {
     background-color: #055a8e;
@@ -102,6 +97,7 @@ body {
 
 .view--requests .view__header,
 .shariff-button a,
+header.clearfix,
 .add-block,
 footer#footer,
 .region-sidebar li.list-group-item,
@@ -131,6 +127,7 @@ footer#footer {
   color: #f9f9f9;
   background-color: #1d84c3;
 }
+
 .block .user-login-form,
 .block--userlogin a,
 .nav.navbar-nav > li > a {
@@ -182,12 +179,13 @@ a:active,
   left: 0;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
+  /*
   .navbar-default div.container {
     background: #e2e2e2;
-  }
+  }*/
   
-
+  .nav.navbar-nav > li,
   .links.inline a,
   .navbar-inner li {
     text-transform: uppercase;
@@ -203,6 +201,10 @@ a:active,
 
   .nav.navbar-nav > li > a:active {
     color: #0071b3!important;
+  }
+  
+  .nav.navbar-nav > li > a {
+    color: #0071b3;
   }
 
   .nav > li > a:hover, .nav > li > a:focus {
