Switch to svg logo
Signed-off-by: Holger Kreis <holger@markaspot.org>

--- a/modules/markaspot_ui/css/markaspot_ui.icons.css
+++ b/modules/markaspot_ui/css/markaspot_ui.icons.css
@@ -8,6 +8,6 @@
  */
 .toolbar-bar [data-drupal-link-system-path="admin/content/management"]:before,
 .toolbar-bar .toolbar-icon-markaspot-ui:before {
-    background: transparent url(../images/logo-small.png) 50% 50% no-repeat;
-    background-size: 120%;
+    background: transparent url(../images/logo.svg) 50% 50% no-repeat;
+    background-size: 20%;
 }
