--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7561,12 +7561,13 @@ img.site-logo {
   margin: 0 auto; }
   @media (min-width: 992px) {
     img.site-logo {
-      max-height: 40px;
-      max-width: 40px; } }
+      height: 40px;
+      width: 80px; } }
   @media (max-width: 992px) {
     img.site-logo {
-      max-height: 50px;
-      display: block; } }
+      height: 40px;
+      display: block;
+      } }
 
 .region-head.col-md-12 .block.block--masradix-sitebranding, .region-head.calendar-calendar .block.block--masradix-sitebranding, .view .row > .region-head.list-group .block.block--masradix-sitebranding {
   clear: both;
@@ -8506,11 +8507,13 @@ ul.log_list .count {
   margin-right: -15px;
   clear: left; }
 
+a.navbar-brand {
+  display: block;
+  margin-top: -80px; }
+
 @media (min-width: 992px) {
   .fixed-header {
     display: none; }
-  a.navbar-brand {
-    margin: 0 30px 0 0; }
   .block .user-login-form {
     display: none; }
   .navbar-left {
