--- a/themes/custom/masradix/scss/mas/_sidebarNav.scss
+++ b/themes/custom/masradix/scss/mas/_sidebarNav.scss
@@ -72,7 +72,7 @@
 
   .navbar-brand {
     float: none !important;
-    padding: 0 
+    padding: 0
   }
 
   .fixed-header {
@@ -104,16 +104,16 @@
   margin-right: -15px;
   clear: left;
 }
+a.navbar-brand {
+  display: block;
+  margin-top: -80px;
+}
 
 
 @media (min-width: $screen-md-min) {
 
   .fixed-header {
     display: none;
-  }
-
-  a.navbar-brand {
-    margin: 0 30px 0 0;
   }
 
   .block .user-login-form {
