--- a/themes/custom/masradix/scss/components/_block.scss
+++ b/themes/custom/masradix/scss/components/_block.scss
@@ -118,6 +118,12 @@ a.btn-circle span {
   overflow: hidden;
 }
 
+// Map front-page.
+
+.page--front h4 {
+    display:none;    
+}
+
 // Footer
 .scroll-to-top.show {
   z-index: 999;
