--- a/themes/custom/masradix/scss/components/_form.scss
+++ b/themes/custom/masradix/scss/components/_form.scss
@@ -19,6 +19,13 @@
   }
 }
 
+
+.leaflet-control-geocoder {
+
+  @media (max-width: $screen-xs-max) {
+    max-width: 250px;
+  }
+}
 #locateMe {
   text-decoration: underline;
   cursor: pointer;
