Remove row class from footer block

--- a/themes/custom/masradix/templates/block/block--system-menu-block--footer.html.twig
+++ b/themes/custom/masradix/templates/block/block--system-menu-block--footer.html.twig
@@ -35,7 +35,7 @@ set classes = [
   bundle|clean_class
 ]
 %}
-<div{{ attributes.addClass(classes).addClass('row')}}>
+<div{{ attributes.addClass(classes)}}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
