--- a/themes/custom/masradix/scss/components/_node.scss
+++ b/themes/custom/masradix/scss/components/_node.scss
@@ -3,7 +3,7 @@
 article.service-request--teaser {
   background: $gray-lighter;
   box-shadow:
-    0 2px 2px 0 rgba(0,0,0,0.16), 
+    0 2px 2px 0 rgba(0,0,0,0.16),
     0 0 0 1px rgba(0,0,0,0.08);
 }
 
@@ -20,16 +20,14 @@ article.service-request--teaser.focus {
 }
 
 article.service-request--teaser.focus:before {
-  font-family: "FontAwesome"; 
+  font-family: "FontAwesome";
   font-weight: 900;
-  content: "\f062";
-  text-align: center;
-  display: block;
-  position: relative;
-  height: 60px;
-  width:100%;
-
-  line-height: 3;
+  content: "\f041";
+  position: absolute;
+  width: 10%;
+  left: 94%;
+  color: #fff;
+  line-height: 4;
 }
 
 article.service-request--gallery {
