--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7279,9 +7279,9 @@ article.service-request--teaser.focus:before {
   content: "\f041";
   position: absolute;
   width: 10%;
-  right: 10px;
+  left: 94%;
   color: #fff;
-  line-height: 3; }
+  line-height: 4; }
 
 article.service-request--gallery {
   padding: 0;
@@ -7470,7 +7470,7 @@ article.service-request--teaser footer {
   color: #20b4e4; }
 
 .col-sm-6.fa .color-d3d3d3, article.service-request .color-d3d3d3 {
-  color: #D3D3D3; }
+  color: #999; }
 
 .col-sm-6.fa .color-808080, article.service-request .color-808080 {
   color: #808080; }
