--- a/themes/custom/masradix/scss/components/_node.scss
+++ b/themes/custom/masradix/scss/components/_node.scss
@@ -249,7 +249,7 @@ article.service-request--teaser footer {
     color: #20b4e4;
   }
   .color-d3d3d3 {
-    color: #D3D3D3;
+    color: #999;
   }
   .color-808080 {
     color: #808080;
