--- a/themes/custom/masradix/templates/node/node--service-request--gallery.html.twig
+++ b/themes/custom/masradix/templates/node/node--service-request--gallery.html.twig
@@ -81,6 +81,12 @@ view_mode ? bundle ~ '--' ~ view_mode|clean_class,
 set cols = content.field_status_notes['#field_name'] and content.field_category['#field_name'] ? 6 : 12
 %}
 
+{%
+    set header_image = node.field_request_image.entity.fileuri
+%}
+{% if header_image is null and node.field_request_media.entity.isPublished %}
+    {% set header_image = node.field_request_media.entity.field_media_image.entity.fileuri %}
+{%  endif %}
 
 
 
@@ -94,7 +100,7 @@ set cols = content.field_status_notes['#field_name'] and content.field_category[
         <h2{{ title_attributes }} style="background: linear-gradient(
                 rgba(0, 0, 0, 0.4),
                 rgba(0, 0, 0, 0.4)
-                ), url({{ file_url(node.field_request_image.entity.fileuri | image_style('large') ) }});
+                ), url({{ file_url(header_image | image_style('large') ) }});
                 background-repeat:no-repeat;
                 background-size:100%;
                 background-position:center;">
