--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -1583,7 +1583,8 @@ pre {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
-  padding-right: 15px; }
+  padding-right: 15px;
+  }
 
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left; }
@@ -7816,8 +7817,9 @@ select.selectpicker {
   width: 100%; }
 
 .bootstrap-select.btn-group .dropdown-menu {
-  min-width: 100%;
-  box-sizing: border-box; }
+  min-width: 50%;
+  box-sizing: border-box;
+  }
   .bootstrap-select.btn-group .dropdown-menu.inner {
     position: static;
     float: none;
@@ -8288,7 +8290,9 @@ fieldset#edit-field-geolocation-0-map-container div.panel-body, fieldset#edit-fi
 .map-request-block {
   width: 100%;
   height: 220px;
-  position: relative; }
+  position: relative;
+  z-index: 10;
+  }
 
 .map-block {
   width: 100%;
