--- a/themes/custom/mas_olivero/css/base/color.css
+++ b/themes/custom/mas_olivero/css/base/color.css
@@ -222,6 +222,10 @@ a:focus {
   color: #4e9602;
 }
 
+.node__title a:hover, .node__title a:focus {
+  color: #4e9602;
+}
+
 .node--view-mode-teaser .node__meta a {
   color: #4e9602;
 }
