--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -137,66 +137,6 @@ h3 {
   font-weight: 200;
 }
 
-@media (max-width: 500px) {
-  h2.node__title {
-    float: right;
-    padding-top: 1rem;
-  }
-}
-
-.service-request h2:before {
-  position: absolute;
-  left: 48%;
-  content: "\f030";
-  opacity: 0.2;
-  color: #fff;
-  font-family: "FontAwesome", sans-serif;
-  font-size: xx-large;
-  line-height: 2;
-}
-
-/*
-article.node--type-service-request.focus {
-
-}
-*/
-
-article.node--type-service-request.focus:before {
-  position: absolute;
-  left: 94%;
-  width: 10%;
-  content: "\f041";
-  color: #ddd;
-  font-family: "FontAwesome", sans-serif;
-  font-weight: 900;
-  line-height: 4;
-}
-
-.field--type-address > .field__item:before {
-  content: "\f041";
-  color: #ddd;
-  font: normal normal normal 3rem/1 "FontAwesome", sans-serif;
-  position: relative;
-  left: -5rem;
-  top: 5rem;
-}
-
-.address {
-    color: #313637;
-    font-family: "Lora", "georgia", serif;
-    font-size: 1.125rem;
-    margin-top: 0;
-}
-
-.block-field-blocknodeservice-requestfield-category,
-.block-field-blocknodeservice-requestfield-status {
-  padding: 1rem;
-  text-align: center;
-  background: #fff;
-  border-left: 2px solid #ddd;
-  font-size: 1.3rem;
-}
-
 div.paragraph .field--name-field-status-term, div.status .field--name-field-status-term, div.category .field--name-field-status-term {
       font-weight: 800;
   }
@@ -297,7 +237,7 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
 .field--name-field-status-notes .paragraph {
   color: #ddd;
   margin: 0 1rem 1rem 0
- 
+
 }
 
 .field--name-field-status-notes .paragraph:before {
@@ -332,7 +272,6 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
     border-right: 0;
     border-left: 0;
     border-radius: 0;
-    background-color: #fff;
   }
 
 .block-views-blockstats-block-status-category ul.list-group li.list-group-item:first-child, .block-views-blockstats-block-stats-status ul.list-group li.list-group-item:first-child {
@@ -387,92 +326,76 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
 
 /* Action block */
 
+div#block-markaspotactionstats,
 div#block-markaspotaction {
   position: absolute;
   margin: auto;
   padding: 0.1rem 1rem;
   left: 50%;
-  top: 35%;
+  top: 67%;
   transform: translate(-50%, -50%);
   z-index:10;
-  width:80%
-
-
-
-
+  width:90%
 }
 
 @media (min-width: 500px) {
 
+div#block-markaspotactionstats,
 div#block-markaspotaction {
     top: 300px;
     max-width: 100vw
-
-
-
-
 }
-    div#block-markaspotaction a {
+    div#block-markaspotactionstats a, div#block-markaspotaction a {
       font-size: large
     }
   }
 
 @media (min-width: 700px) {
 
+div#block-markaspotactionstats,
 div#block-markaspotaction {
     top: 510px
-
-
-
-
 }
-    div#block-markaspotaction a {
+    div#block-markaspotactionstats a, div#block-markaspotaction a {
       font-size: large
     }
   }
 
 @media (min-width: 1000px) {
 
+div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 580px
-
-
-
-
+    top: 510px
 }
-    div#block-markaspotaction a {
+    div#block-markaspotactionstats a, div#block-markaspotaction a {
       font-size: small
     }
   }
 
 @media (min-width: 1300px) {
 
+div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 580px
-
-
-
-
+    top: 580px;
+    margin: auto auto auto -100px
 }
   }
 
 @media (min-width: 1200px) {
 
+div#block-markaspotactionstats,
 div#block-markaspotaction {
     top: 580px
-
-
-
-
 }
   }
 
 @media (min-width: 1440px) {
 
+div#block-markaspotactionstats,
 div#block-markaspotaction {
-    /* top: 580px; */
-    /* width: 1296px; */
-    /* margin-right: 200px; */
+    top: 580px;
+    width: 45%;
+    margin: auto auto auto -250px
 }
   }
 
@@ -482,7 +405,7 @@ div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-
     margin: 0;
     padding-left: 0;
     border-radius: 0.25rem;
-    box-shadow: -4px 1px 36px rgba(0, 0, 0, 0.08)
+    box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08)
   }
 
 div#block-markaspotaction ul.list-group .list-group-item:hover, div#block-markaspotactionstats ul.list-group .list-group-item:hover {
@@ -503,7 +426,6 @@ div#block-markaspotaction ul.list-group li a:before, div#block-markaspotactionst
       margin: 1rem;
       text-align: center;
       font-family: "FontAwesome", sans-serif;
-      font-size: 1.3rem;
       line-height: 1.2rem;
     }
 
@@ -517,6 +439,14 @@ div#block-markaspotaction ul.list-group li.requests a:before, div#block-markaspo
 
 div#block-markaspotaction ul.list-group li.statistics a:before, div#block-markaspotactionstats ul.list-group li.statistics a:before {
       content: "\f200";
+    }
+
+div#block-markaspotaction ul.list-group li.heatmap a:before,div#block-markaspotactionstats ul.list-group li.heatmap a:before{
+      content: "\f2c8";
+    }
+
+div#block-markaspotaction ul.list-group li.time-control a:before,div#block-markaspotactionstats ul.list-group li.time-control a:before{
+      content: "\f017";
     }
 
 @media (max-width: 700px) {
@@ -592,21 +522,46 @@ div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-
     }
 
 div#block-markaspotactionstats {
-  position: absolute;
-  z-index: 10;
-  top: 480px;
-  width: 50%;
-  margin: auto;
-  padding: 0 1.25rem;
-  left: 49%
+  display:none
 }
 
+@media (min-width: 500px) {
+
+div#block-markaspotactionstats {
+    display:none
+}
+  }
+
+@media (min-width: 700px) {
+
+div#block-markaspotactionstats {
+    display:block;
+    width: 60%;
+    left: 70%
+}
+  }
+
+@media (min-width: 1300px) {
+
+div#block-markaspotactionstats {
+    width: 50%;
+    left: 75%
+}
+  }
+
+@media (min-width: 1440px) {
+
+div#block-markaspotactionstats {
+    max-width: 550px;
+    left: 85%
+}
+  }
+
 div#block-markaspotactionstats p {
-    border-left: 2px solid #dfdfdf;
+    border-left: 2px solid #e7edf1;
     padding: 0 1rem;
     margin: 0.75rem;
     color: #000;
-    box-shadow: -4px 1px 36px rgba(0, 0, 0, 0.08);
     background-color: #fff;
   }
 
@@ -614,17 +569,6 @@ div#block-markaspotactionstats ul.list-group {
     margin: 0;
     border-radius: 1rem
   }
-
-@media (max-width: 700px) {
-
-div#block-markaspotactionstats ul.list-group {
-      flex-direction: row
-  }
-    }
-
-div#block-markaspotactionstats ul.list-group li a {
-      font-size: .8rem;
-    }
 
 div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
       border-top-left-radius: inherit;
@@ -647,5 +591,19 @@ div#block-markaspotactionstats ul.list-group .list-group-item {
       line-height: 1.5rem;
       text-decoration: none;
       border: 1px solid rgba(0, 0, 0, 0.125)!important;
-      background-color: #fff;
+      background-color: #fff
     }
+
+@media (min-width: 500px) {
+        div#block-markaspotactionstats ul.list-group .list-group-item a {
+          font-size: small;
+        }
+      }
+
+@media (min-width: 700px) {
+        div#block-markaspotactionstats ul.list-group .list-group-item a {
+          font-size: medium;
+        }
+      }
+
+
