Fix time control management

--- a/modules/markaspot_map/css/map.css
+++ b/modules/markaspot_map/css/map.css
@@ -25,3 +25,26 @@
 .fa.active {
     color: #888;
 }
+
+a.leaflet-control-timecontrol.timecontrol-date {
+  width: 120px;
+  padding-left: 30px !important;
+  font-weight: bold;
+}
+.leaflet-touch .timecontrol-slider .slider {
+  margin-top: 14px;
+}
+.timecontrol-slider .slider {
+  margin-left: 10px;
+  height: 2px;
+  border-color: #000;
+}
+.timecontrol-slider .knob {
+  width: 14px;
+  height: 14px;
+  border-radius: 7px;
+  margin-top: -7px;
+  margin-left: -12px;
+  border: 0px;
+  background-color: #000;
+}
