Fix background color for action links

--- a/themes/custom/mas_olivero/css/base/color.css
+++ b/themes/custom/mas_olivero/css/base/color.css
@@ -222,6 +222,20 @@ a:focus {
   color: #4e9602;
 }
 
+.block-views-blockstats-block-stats-status ul.list-group {
+  background-color: #fff;
+  box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08);
+}
+
+div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-group {
+    background-color: #fff;
+    box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08)
+  }
+
+div#block-markaspotaction ul.list-group .list-group-item:hover, div#block-markaspotactionstats ul.list-group .list-group-item:hover {
+      background-color: #ddd;
+    }
+
 .node__title a:hover, .node__title a:focus {
   color: #4e9602;
 }
