--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -137,6 +137,34 @@ h3 {
   font-weight: 200;
 }
 
+.node--type-service-request .node__content .category,
+  .node--type-service-request .node__content .status {
+    border-left: 2px solid #e7edf1;
+  }
+
+.view-requests .node--type-service-request .node__content {
+  display:flex;
+  flex-wrap: wrap
+}
+
+.view-requests .node--type-service-request .node__content .category,
+  .view-requests .node--type-service-request .node__content .status {
+    margin-right: 1.125rem;
+    flex-basis: calc(50% - 1.125rem);
+    flex-grow: 0;
+    flex-shrink: 0;
+    padding: 1rem;
+    text-align: center;
+    background: #fff;
+    border-left: 2px solid #e7edf1;
+    font-size: 1.3rem;
+    margin-bottom: 2.25rem;
+  }
+
+.view-requests .node--type-service-request .node__content .text-content {
+    flex-basis: calc(100% - 1.125rem);
+  }
+
 div.paragraph .field--name-field-status-term, div.status .field--name-field-status-term, div.category .field--name-field-status-term {
       font-weight: 800;
   }
@@ -346,7 +374,7 @@ div#block-markaspotaction {
     max-width: 100vw
 }
     div#block-markaspotactionstats a, div#block-markaspotaction a {
-      font-size: large
+      font-size: small
     }
   }
 
@@ -368,7 +396,7 @@ div#block-markaspotaction {
     top: 510px
 }
     div#block-markaspotactionstats a, div#block-markaspotaction a {
-      font-size: small
+      font-size: large
     }
   }
 
@@ -377,7 +405,7 @@ div#block-markaspotaction {
 div#block-markaspotactionstats,
 div#block-markaspotaction {
     top: 580px;
-    margin: auto auto auto -100px
+    margin: auto auto auto 50px
 }
   }
 
@@ -394,8 +422,8 @@ div#block-markaspotaction {
 div#block-markaspotactionstats,
 div#block-markaspotaction {
     top: 580px;
-    width: 45%;
-    margin: auto auto auto -250px
+    width: 70%;
+    margin: auto auto auto -100px
 }
   }
 
@@ -409,7 +437,7 @@ div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-
   }
 
 div#block-markaspotaction ul.list-group .list-group-item:hover, div#block-markaspotactionstats ul.list-group .list-group-item:hover {
-      background-color: #ddd;
+      background-color: #ddd!important;
     }
 
 div#block-markaspotaction ul.list-group li a:link, div#block-markaspotactionstats ul.list-group li a:link {
