--- a/themes/custom/mas_olivero/css/base/mas.pcss.css
+++ b/themes/custom/mas_olivero/css/base/mas.pcss.css
@@ -188,7 +188,7 @@ div.category {
   color: #ddd;
   margin: 0 1rem 1rem 0;
   &:before {
-    font: normal normal normal 3rem/1 "FontAwesome", sans-serif;
+    font: normal normal normal 3rem/1 "Font Awesome 5 Free", sans-serif;
     content: "\f017";
     position: relative;
     left: -5rem;
@@ -349,7 +349,7 @@ div#block-markaspotactionstats {
       width: 1rem;
       margin: 1rem;
       text-align: center;
-      font-family: "FontAwesome", sans-serif;
+      font-family: "Font Awesome 5 Free", sans-serif;
       line-height: 1.2rem;
     }
     & li.report a:before {
