--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -356,21 +356,21 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
 
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-  position: absolute;
-  margin: auto;
-  padding: 0.1rem 1rem;
+  position: relative;
   left: 50%;
-  top: 300px;
-  transform: translate(-50%, -50%);
-  z-index:10;
-  width:90%
+  top: 50px;
+  transform: translate(-50%, 0);
+  z-index: 10;
+  width: 68%;
+  margin: 0;
+  height: 0
 }
 
 @media (min-width: 500px) {
 
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 150px;
+    top: 160px;
     max-width: 100vw
 }
     div#block-markaspotactionstats a, div#block-markaspotaction a {
@@ -382,10 +382,11 @@ div#block-markaspotaction {
 
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 510px
+    width: 90%;
+    max-width: 100vw
 }
     div#block-markaspotactionstats a, div#block-markaspotaction a {
-      font-size: large
+      font-size: small
     }
   }
 
@@ -393,7 +394,7 @@ div#block-markaspotaction {
 
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 510px
+    top: 370px
 }
     div#block-markaspotactionstats a, div#block-markaspotaction a {
       font-size: large
@@ -404,7 +405,6 @@ div#block-markaspotaction {
 
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 580px;
     margin: auto auto auto 50px
 }
   }
@@ -413,7 +413,6 @@ div#block-markaspotaction {
 
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 580px
 }
   }
 
@@ -421,9 +420,6 @@ div#block-markaspotaction {
 
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-    top: 580px;
-    width: 70%;
-    margin: auto auto auto -100px
 }
   }
 
@@ -433,7 +429,7 @@ div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-
     margin: 0;
     padding-left: 0;
     border-radius: 0.25rem;
-    box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08)
+    box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.18)
   }
 
 div#block-markaspotaction ul.list-group .list-group-item:hover, div#block-markaspotactionstats ul.list-group .list-group-item:hover {
