--- a/themes/custom/mas_olivero/css/base/mas.pcss.css
+++ b/themes/custom/mas_olivero/css/base/mas.pcss.css
@@ -273,51 +273,45 @@ div.category {
 
 
 
-
 /* Action block */
 div#block-markaspotactionstats,
 div#block-markaspotaction {
-  position: absolute;
-  margin: auto;
-  padding: 0.1rem 1rem;
+  position: relative;
   left: 50%;
-  top: 300px;
-  transform: translate(-50%, -50%);
-  z-index:10;
-  width:90%;
-
+  top: 50px;
+  transform: translate(-50%, 0);
+  z-index: 10;
+  width: 68%;
+  margin: 0;
+  height: 0;
   @media (--sm) {
-    top: 150px;
+    top: 160px;
     max-width: 100vw;
     & a {
       font-size: small
     }
   }
   @media (--md) {
-    top: 510px;
+    width: 90%;
+    max-width: 100vw;
     & a {
-      font-size: large
+      font-size: small
     }
   }
   @media (--lg) {
-    top: 510px;
+    top: 370px;
     & a {
       font-size: large
     }
   }
   @media (--xl) {
-    top: 580px;
     margin: auto auto auto 50px;
   }
 
   @media (--nav) {
-    top: 580px;
   }
 
   @media (--grid-max) {
-    top: 580px;
-    width: 70%;
-    margin: auto auto auto -100px;
   }
 }
 
@@ -330,7 +324,7 @@ div#block-markaspotactionstats {
     margin: 0;
     padding-left: 0;
     border-radius: 0.25rem;
-    box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08);
+    box-shadow: -36px 1px 36px rgb(0 0 0 / 18%);
 
     & .list-group-item:hover {
       background-color: #ddd!important;
