--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -354,8 +354,8 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
 
 /* Action block */
 
-div#block-markaspotactionstats,
-div#block-markaspotaction {
+div#block-markaspotfrontaction,
+div#block-markaspotactionfront {
   position: relative;
   left: 50%;
   top: 50px;
@@ -368,62 +368,62 @@ div#block-markaspotaction {
 
 @media (min-width: 500px) {
 
-div#block-markaspotactionstats,
-div#block-markaspotaction {
+div#block-markaspotfrontaction,
+div#block-markaspotactionfront {
     top: 160px;
     max-width: 100vw
 }
-    div#block-markaspotactionstats a, div#block-markaspotaction a {
+    div#block-markaspotfrontaction a, div#block-markaspotactionfront a {
       font-size: small
     }
   }
 
 @media (min-width: 700px) {
 
-div#block-markaspotactionstats,
-div#block-markaspotaction {
+div#block-markaspotfrontaction,
+div#block-markaspotactionfront {
     width: 90%;
     max-width: 100vw
 }
-    div#block-markaspotactionstats a, div#block-markaspotaction a {
+    div#block-markaspotfrontaction a, div#block-markaspotactionfront a {
       font-size: small
     }
   }
 
 @media (min-width: 1000px) {
 
-div#block-markaspotactionstats,
-div#block-markaspotaction {
+div#block-markaspotfrontaction,
+div#block-markaspotactionfront {
     top: 370px
 }
-    div#block-markaspotactionstats a, div#block-markaspotaction a {
+    div#block-markaspotfrontaction a, div#block-markaspotactionfront a {
       font-size: large
     }
   }
 
 @media (min-width: 1300px) {
 
-div#block-markaspotactionstats,
-div#block-markaspotaction {
+div#block-markaspotfrontaction,
+div#block-markaspotactionfront {
     margin: auto auto auto 50px
 }
   }
 
 @media (min-width: 1200px) {
 
-div#block-markaspotactionstats,
-div#block-markaspotaction {
+div#block-markaspotfrontaction,
+div#block-markaspotactionfront {
 }
   }
 
 @media (min-width: 1440px) {
 
-div#block-markaspotactionstats,
-div#block-markaspotaction {
+div#block-markaspotfrontaction,
+div#block-markaspotactionfront {
 }
   }
 
-div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-group {
+div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.list-group {
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -432,11 +432,11 @@ div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-
     box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.18)
   }
 
-div#block-markaspotaction ul.list-group .list-group-item:hover, div#block-markaspotactionstats ul.list-group .list-group-item:hover {
+div#block-markaspotfrontaction ul.list-group .list-group-item:hover, div#block-markaspotactionstats ul.list-group .list-group-item:hover {
       background-color: #ddd!important;
     }
 
-div#block-markaspotaction ul.list-group li a:link, div#block-markaspotactionstats ul.list-group li a:link {
+div#block-markaspotfrontaction ul.list-group li a:link, div#block-markaspotactionstats ul.list-group li a:link {
       box-shadow: none;
       padding: 0;
       margin: 0;
@@ -444,7 +444,7 @@ div#block-markaspotaction ul.list-group li a:link, div#block-markaspotactionstat
       width: 100%;
     }
 
-div#block-markaspotaction ul.list-group li a:before, div#block-markaspotactionstats ul.list-group li a:before {
+div#block-markaspotfrontaction ul.list-group li a:before, div#block-markaspotactionstats ul.list-group li a:before {
       display: inline-block;
       width: 1rem;
       margin: 1rem;
@@ -453,45 +453,45 @@ div#block-markaspotaction ul.list-group li a:before, div#block-markaspotactionst
       line-height: 1.2rem;
     }
 
-div#block-markaspotaction ul.list-group li.report a:before, div#block-markaspotactionstats ul.list-group li.report a:before {
-      content: "\f041";
+div#block-markaspotfrontaction ul.list-group li.report a:before, div#block-markaspotactionstats ul.list-group li.report a:before {
+      content: "\f030";
     }
 
-div#block-markaspotaction ul.list-group li.requests a:before, div#block-markaspotactionstats ul.list-group li.requests a:before {
+div#block-markaspotfrontaction ul.list-group li.requests a:before, div#block-markaspotactionstats ul.list-group li.requests a:before {
       content: "\f058";
     }
 
-div#block-markaspotaction ul.list-group li.statistics a:before, div#block-markaspotactionstats ul.list-group li.statistics a:before {
-      content: "\f200";
+div#block-markaspotfrontaction ul.list-group li.statistics a:before, div#block-markaspotactionstats ul.list-group li.statistics a:before {
+      content: "\f058";
     }
 
-div#block-markaspotaction ul.list-group li.heatmap a:before,div#block-markaspotactionstats ul.list-group li.heatmap a:before{
+div#block-markaspotfrontaction ul.list-group li.heatmap a:before,div#block-markaspotactionstats ul.list-group li.heatmap a:before{
       content: "\f2c8";
     }
 
-div#block-markaspotaction ul.list-group li.time-control a:before,div#block-markaspotactionstats ul.list-group li.time-control a:before{
+div#block-markaspotfrontaction ul.list-group li.time-control a:before,div#block-markaspotactionstats ul.list-group li.time-control a:before{
       content: "\f017";
     }
 
 @media (max-width: 700px) {
 
-div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-group {
+div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.list-group {
       flex-direction: column
   }
 
-      div#block-markaspotaction ul.list-group > .list-group-item:first-child, div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:first-child, div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
         border-left-width: 1px;
         border-top-left-radius: inherit;
         border-top-right-radius: inherit;
         border-bottom-left-radius: 0;
       }
 
-      div#block-markaspotaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotactionstats ul.list-group > .list-group-item + .list-group-item {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotactionstats ul.list-group > .list-group-item + .list-group-item {
         border-top-width: 0;
         border-left-width: 1px;
       }
 
-      div#block-markaspotaction ul.list-group > .list-group-item:last-child, div#block-markaspotactionstats ul.list-group > .list-group-item:last-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:last-child, div#block-markaspotactionstats ul.list-group > .list-group-item:last-child {
         border-top-right-radius: 0;
         border-bottom-right-radius: inherit;
         border-bottom-left-radius: inherit;
@@ -499,7 +499,7 @@ div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-
 
       }
 
-      div#block-markaspotaction ul.list-group .list-group-item, div#block-markaspotactionstats ul.list-group .list-group-item {
+      div#block-markaspotfrontaction ul.list-group .list-group-item, div#block-markaspotactionstats ul.list-group .list-group-item {
         position: relative;
         display: block;
         width: 100%;
@@ -512,29 +512,29 @@ div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-
 
 @media (min-width: 700px) {
 
-div#block-markaspotaction ul.list-group, div#block-markaspotactionstats ul.list-group {
+div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.list-group {
       flex-direction: row;
       border-radius: 1.75rem
   }
 
-      div#block-markaspotaction ul.list-group > .list-group-item:first-child, div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:first-child, div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
         border-top-left-radius: inherit;
         border-top-right-radius: 0;
         border-bottom-left-radius: 1.75rem;
       }
 
-      div#block-markaspotaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotactionstats ul.list-group > .list-group-item + .list-group-item {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotactionstats ul.list-group > .list-group-item + .list-group-item {
         border-top-width: 1px;
         border-left-width: 0;
       }
 
-      div#block-markaspotaction ul.list-group > .list-group-item:last-child, div#block-markaspotactionstats ul.list-group > .list-group-item:last-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:last-child, div#block-markaspotactionstats ul.list-group > .list-group-item:last-child {
         border-top-right-radius: 1.75rem;
         border-bottom-right-radius: inherit;
         border-bottom-left-radius: 0;
       }
 
-      div#block-markaspotaction ul.list-group .list-group-item, div#block-markaspotactionstats ul.list-group .list-group-item {
+      div#block-markaspotfrontaction ul.list-group .list-group-item, div#block-markaspotactionstats ul.list-group .list-group-item {
         position: relative;
         display: block;
         width: 33%;
