--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -280,6 +280,17 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
     margin-bottom: 0.25rem;
   }
 
+.field--type-address > .field__item:before {
+  content: "\f3c5";
+  color: #ddd;
+  font: normal normal normal 3rem/1 "Font Awesome 5 Free", sans-serif;
+  position: relative;
+  left: -5rem;
+  top: 5rem;
+  color: #ddd;
+  font-weight: 900;
+}
+
 /* Statistik lists */
 
 .block-views-blockstats-block-status-category ul.list-group,
@@ -355,7 +366,7 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
 /* Action block */
 
 div#block-markaspotfrontaction,
-div#block-markaspotactionfront {
+div#block-markaspotstatsaction {
   position: relative;
   left: 50%;
   top: 50px;
@@ -369,42 +380,37 @@ div#block-markaspotactionfront {
 @media (min-width: 500px) {
 
 div#block-markaspotfrontaction,
-div#block-markaspotactionfront {
+div#block-markaspotstatsaction {
     top: 160px;
     max-width: 100vw
 }
-    div#block-markaspotfrontaction a, div#block-markaspotactionfront a {
-      font-size: small
+    div#block-markaspotfrontaction a, div#block-markaspotstatsaction a {
+      font-size: medium
     }
   }
 
 @media (min-width: 700px) {
 
 div#block-markaspotfrontaction,
-div#block-markaspotactionfront {
+div#block-markaspotstatsaction {
+    top: 370px;
     width: 90%;
     max-width: 100vw
 }
-    div#block-markaspotfrontaction a, div#block-markaspotactionfront a {
-      font-size: small
+    div#block-markaspotfrontaction a, div#block-markaspotstatsaction a {
+      font-size: large
     }
   }
 
 @media (min-width: 1000px) {
-
-div#block-markaspotfrontaction,
-div#block-markaspotactionfront {
-    top: 370px
-}
-    div#block-markaspotfrontaction a, div#block-markaspotactionfront a {
-      font-size: large
+    div#block-markaspotfrontaction a, div#block-markaspotstatsaction a {
     }
   }
 
 @media (min-width: 1300px) {
 
 div#block-markaspotfrontaction,
-div#block-markaspotactionfront {
+div#block-markaspotstatsaction {
     margin: auto auto auto 50px
 }
   }
@@ -412,18 +418,18 @@ div#block-markaspotactionfront {
 @media (min-width: 1200px) {
 
 div#block-markaspotfrontaction,
-div#block-markaspotactionfront {
+div#block-markaspotstatsaction {
 }
   }
 
 @media (min-width: 1440px) {
 
 div#block-markaspotfrontaction,
-div#block-markaspotactionfront {
+div#block-markaspotstatsaction {
 }
   }
 
-div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.list-group {
+div#block-markaspotfrontaction ul.list-group, div#block-markaspotstatsaction ul.list-group {
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -432,66 +438,41 @@ div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.
     box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.18)
   }
 
-div#block-markaspotfrontaction ul.list-group .list-group-item:hover, div#block-markaspotactionstats ul.list-group .list-group-item:hover {
+div#block-markaspotfrontaction ul.list-group .list-group-item:hover, div#block-markaspotstatsaction ul.list-group .list-group-item:hover {
       background-color: #ddd!important;
     }
 
-div#block-markaspotfrontaction ul.list-group li a:link, div#block-markaspotactionstats ul.list-group li a:link {
+div#block-markaspotfrontaction ul.list-group li a:link, div#block-markaspotstatsaction ul.list-group li a:link {
       box-shadow: none;
-      padding: 0;
+      padding: 1rem;
       margin: 0;
       display: inline-block;
       width: 100%;
     }
 
-div#block-markaspotfrontaction ul.list-group li a:before, div#block-markaspotactionstats ul.list-group li a:before {
-      display: inline-block;
-      width: 1rem;
-      margin: 1rem;
-      text-align: center;
-      font-family: "Font Awesome 5 Free", sans-serif;
-      line-height: 1.2rem;
+div#block-markaspotfrontaction ul.list-group li a:before, div#block-markaspotstatsaction ul.list-group li a:before {
+
     }
 
-div#block-markaspotfrontaction ul.list-group li.report a:before, div#block-markaspotactionstats ul.list-group li.report a:before {
-      content: "\f030";
-    }
+@media (min-width: 500px) {
 
-div#block-markaspotfrontaction ul.list-group li.requests a:before, div#block-markaspotactionstats ul.list-group li.requests a:before {
-      content: "\f058";
-    }
-
-div#block-markaspotfrontaction ul.list-group li.statistics a:before, div#block-markaspotactionstats ul.list-group li.statistics a:before {
-      content: "\f058";
-    }
-
-div#block-markaspotfrontaction ul.list-group li.heatmap a:before,div#block-markaspotactionstats ul.list-group li.heatmap a:before{
-      content: "\f2c8";
-    }
-
-div#block-markaspotfrontaction ul.list-group li.time-control a:before,div#block-markaspotactionstats ul.list-group li.time-control a:before{
-      content: "\f017";
-    }
-
-@media (max-width: 700px) {
-
-div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.list-group {
+div#block-markaspotfrontaction ul.list-group, div#block-markaspotstatsaction ul.list-group {
       flex-direction: column
   }
 
-      div#block-markaspotfrontaction ul.list-group > .list-group-item:first-child, div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:first-child, div#block-markaspotstatsaction ul.list-group > .list-group-item:first-child {
         border-left-width: 1px;
         border-top-left-radius: inherit;
         border-top-right-radius: inherit;
         border-bottom-left-radius: 0;
       }
 
-      div#block-markaspotfrontaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotactionstats ul.list-group > .list-group-item + .list-group-item {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotstatsaction ul.list-group > .list-group-item + .list-group-item {
         border-top-width: 0;
         border-left-width: 1px;
       }
 
-      div#block-markaspotfrontaction ul.list-group > .list-group-item:last-child, div#block-markaspotactionstats ul.list-group > .list-group-item:last-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:last-child, div#block-markaspotstatsaction ul.list-group > .list-group-item:last-child {
         border-top-right-radius: 0;
         border-bottom-right-radius: inherit;
         border-bottom-left-radius: inherit;
@@ -499,11 +480,11 @@ div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.
 
       }
 
-      div#block-markaspotfrontaction ul.list-group .list-group-item, div#block-markaspotactionstats ul.list-group .list-group-item {
+      div#block-markaspotfrontaction ul.list-group .list-group-item, div#block-markaspotstatsaction ul.list-group .list-group-item {
         position: relative;
         display: block;
         width: 100%;
-        padding: 0.5rem 1rem;
+        padding: 1rem;
         text-align: center;
         text-decoration: none;
         border: 1px solid rgba(0, 0, 0, 0.125);
@@ -512,29 +493,29 @@ div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.
 
 @media (min-width: 700px) {
 
-div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.list-group {
+div#block-markaspotfrontaction ul.list-group, div#block-markaspotstatsaction ul.list-group {
       flex-direction: row;
       border-radius: 1.75rem
   }
 
-      div#block-markaspotfrontaction ul.list-group > .list-group-item:first-child, div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:first-child, div#block-markaspotstatsaction ul.list-group > .list-group-item:first-child {
         border-top-left-radius: inherit;
         border-top-right-radius: 0;
         border-bottom-left-radius: 1.75rem;
       }
 
-      div#block-markaspotfrontaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotactionstats ul.list-group > .list-group-item + .list-group-item {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item + .list-group-item, div#block-markaspotstatsaction ul.list-group > .list-group-item + .list-group-item {
         border-top-width: 1px;
         border-left-width: 0;
       }
 
-      div#block-markaspotfrontaction ul.list-group > .list-group-item:last-child, div#block-markaspotactionstats ul.list-group > .list-group-item:last-child {
+      div#block-markaspotfrontaction ul.list-group > .list-group-item:last-child, div#block-markaspotstatsaction ul.list-group > .list-group-item:last-child {
         border-top-right-radius: 1.75rem;
         border-bottom-right-radius: inherit;
         border-bottom-left-radius: 0;
       }
 
-      div#block-markaspotfrontaction ul.list-group .list-group-item, div#block-markaspotactionstats ul.list-group .list-group-item {
+      div#block-markaspotfrontaction ul.list-group .list-group-item, div#block-markaspotstatsaction ul.list-group .list-group-item {
         position: relative;
         display: block;
         width: 33%;
@@ -545,43 +526,43 @@ div#block-markaspotfrontaction ul.list-group, div#block-markaspotactionstats ul.
       }
     }
 
-div#block-markaspotactionstats {
+div#block-markaspotstatsaction {
   display:none
 }
 
 @media (min-width: 500px) {
 
-div#block-markaspotactionstats {
+div#block-markaspotstatsaction {
     display:none
 }
   }
 
 @media (min-width: 700px) {
 
-div#block-markaspotactionstats {
+div#block-markaspotstatsaction {
     display:block;
-    width: 60%;
-    left: 70%
+    width: 40%;
+    left: 60%
 }
   }
 
 @media (min-width: 1300px) {
 
-div#block-markaspotactionstats {
+div#block-markaspotstatsaction {
     width: 50%;
-    left: 75%
+    left: 20%
 }
   }
 
 @media (min-width: 1440px) {
 
-div#block-markaspotactionstats {
-    max-width: 550px;
-    left: 85%
+div#block-markaspotstatsaction {
+    width: 40%;
+    left: 20%
 }
   }
 
-div#block-markaspotactionstats p {
+div#block-markaspotstatsaction p {
     border-left: 2px solid #e7edf1;
     padding: 0 1rem;
     margin: 0.75rem;
@@ -589,24 +570,24 @@ div#block-markaspotactionstats p {
     background-color: #fff;
   }
 
-div#block-markaspotactionstats ul.list-group {
+div#block-markaspotstatsaction ul.list-group {
     margin: 0;
     border-radius: 1rem
   }
 
-div#block-markaspotactionstats ul.list-group > .list-group-item:first-child {
+div#block-markaspotstatsaction ul.list-group > .list-group-item:first-child {
       border-top-left-radius: inherit;
       border-top-right-radius: 0;
       border-bottom-left-radius: 1rem;
     }
 
-div#block-markaspotactionstats ul.list-group > .list-group-item:last-child {
+div#block-markaspotstatsaction ul.list-group > .list-group-item:last-child {
       border-top-right-radius: 1rem;
       border-bottom-right-radius: inherit;
       border-bottom-left-radius: 0;
     }
 
-div#block-markaspotactionstats ul.list-group .list-group-item {
+div#block-markaspotstatsaction ul.list-group .list-group-item {
       position: relative;
       display: block;
       width: 50%!important;
@@ -619,15 +600,29 @@ div#block-markaspotactionstats ul.list-group .list-group-item {
     }
 
 @media (min-width: 500px) {
-        div#block-markaspotactionstats ul.list-group .list-group-item a {
+        div#block-markaspotstatsaction ul.list-group .list-group-item a {
           font-size: small;
         }
       }
 
 @media (min-width: 700px) {
-        div#block-markaspotactionstats ul.list-group .list-group-item a {
+        div#block-markaspotstatsaction ul.list-group .list-group-item a {
           font-size: medium;
         }
       }
 
+/* Stats */
 
+.page-node-type-page .layout__region {
+  margin: -10px;
+  padding: inherit;
+}
+
+.trend_count {
+  font-size: 3em;
+  line-height: 5rem;
+  background: rgba(221,221,221,0.86667);
+  padding: 10px;
+  text-align: center;
+  min-height: 230px;
+}
