--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -63,32 +63,6 @@
   /* Border radius */
 }
 
-@font-face {
-  font-family: "Alte-DIN-1451-Mittelschrift";
-  src:
-    url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.ttf.woff") format("woff"),
-    url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.ttf.svg#Alte-DIN-1451-Mittelschrift") format("svg"),
-    url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.ttf.eot"),
-    url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.eot?#iefix") format("embedded-opentype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* Apply custom font to elements and widgets */
-
-.primary-nav__menu-link,
-.field__label,
-.form-item__label,
-.fieldset__label,
-h1,
-h2,
-h3 {
-  font-family: "Alte-DIN-1451-Mittelschrift", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-weight: 400;
-  font-display: swap;
-}
-
 #map {
   z-index: 1;
   height: 400px;
@@ -299,7 +273,8 @@ div.paragraph .color-FFFFFF a, div.status .color-FFFFFF a, div.category .color-F
   border-right: 0;
   border-left: 0;
   border-radius: 0;
-  box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08)
+  box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08);
+  list-style: none
 }
 
 .block-views-blockstats-block-status-category ul.list-group li.list-group-item, .block-views-blockstats-block-stats-status ul.list-group li.list-group-item {
@@ -558,7 +533,7 @@ div#block-markaspotstatsaction {
 
 div#block-markaspotstatsaction {
     width: 40%;
-    left: 20%
+    right: 20%
 }
   }
 
@@ -626,3 +601,17 @@ div#block-markaspotstatsaction ul.list-group .list-group-item {
   text-align: center;
   min-height: 230px;
 }
+
+.trend_count {
+  font-size: 2em;
+  text-align: center;
+}
+
+/*charts*/
+
+.block-markaspot-trend-status-block canvas,
+.block-markaspot-trend-category-block canvas {
+  width: 300px!important;
+  height: 300px!important;
+}
+
