--- a/themes/custom/mas_olivero/templates/field/field--node--field-category--service-request.html.twig
+++ b/themes/custom/mas_olivero/templates/field/field--node--field-category--service-request.html.twig
@@ -23,15 +23,12 @@
 #}
 
 
-{% set color = [
-    "color-" ~ color,
-]
-%}
+{% set color =  color %}
 
 {% block content %}
 
   {%- for item in items -%}
-      <div{{ attributes.addClass(color) }}>
+      <div style="color:#{{ color }}" {{ attributes.addClass(color) }}>
           <span class="fa {{ icon }}"</span> {{ item.content }}
       </div>
   {%- endfor -%}
